2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (get_contrast):
	* src/cairo-support.h:
	* src/murrine_style.c (murrine_style_init_from_rc),
	(murrine_style_realize):
	Completed contrast function: now it shades progressbars borders 
	and other widgets

2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_tab), (murrine_draw_separator),
	(murrine_draw_toolbar), (murrine_draw_statusbar),
	(murrine_draw_resize_grip):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
	* src/murrine_style.c (murrine_style_realize):
	More fixes for the contrast function

2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_realize):
	Reworked contrast function, your themes may change

2008-09-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Added Clearlooks ability to draw better menuitem separators using
	style properties. Read from Clearlooks gtkrc for more info

2008-09-01  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_rc_style.c (murrine_rc_style_register_types),
	(murrine_rc_style_finalize), (murrine_rc_style_class_init),
	(murrine_rc_style_class_finalize), (murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c (murrine_set_widget_parameters),
	(murrine_style_draw_flat_box), (murrine_style_draw_box_gap),
	(murrine_style_draw_extension), (murrine_style_draw_box),
	(murrine_style_draw_slider), (murrine_style_draw_shadow_gap),
	(murrine_style_init_from_rc), (murrine_style_realize),
	(murrine_style_copy), (murrine_style_unrealize),
	(murrine_style_register_types), (murrine_style_class_init),
	(murrine_style_class_finalize):
	* src/murrine_style.h:
	* src/murrine_theme_main.c (theme_init):
	Use G_DEFINE_DYNAMIC_TYPE in murrine, similar patch to bug #549830.
	I hope not to have broken anything :)

2008-09-01  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button):